--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd-mobile": "^2.0.1-alpha.0",
+    "antd-mobile": "^2.1.8",
     "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
     "babel-core": "6.26.0",
@@ -16,6 +16,7 @@
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "cookie-parse": "^0.4.0",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
@@ -105,9 +106,7 @@
           "style": "css"
         }
       ],
-      [
-        "transform-decorators-legacy"
-      ]
+      "transform-decorators-legacy"
     ]
   },
   "eslintConfig": {
