--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
   "scripts": {
     "dev": "node scripts/dev.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "server": "nodemon server/server.js"
   },
   "jest": {
     "collectCoverageFrom": [
