--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
+    "immutable": "^3.8.2",
     "jest": "20.0.4",
     "mongoose": "^5.0.12",
     "object-assign": "4.1.1",
@@ -49,6 +50,7 @@
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
     "socket.io": "^2.1.0",
     "socket.io-client": "^2.1.0",
     "style-loader": "0.19.0",
