--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd-mobile": "^2.1.8",
     "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
+    "babel-cli": "^6.26.0",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
@@ -42,6 +43,7 @@
     "promise": "8.0.1",
     "prop-types": "^15.6.1",
     "raf": "3.4.0",
+    "rc-queue-anim": "^1.5.0",
     "react": "^16.2.0",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
@@ -66,7 +68,8 @@
     "dev": "node scripts/dev.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "server": "nodemon server/server.js"
+    "server": "nodemon server/server.js",
+    "server_babel": "set NODE_ENV=test&& nodemon --exec babel-node server/server.js"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -118,7 +121,12 @@
     ]
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "rules": {
+      "jsx-a11y/accessible-emoji": [
+        "off"
+      ]
+    }
   },
   "proxy": "http://localhost:9093"
 }
